[package]
name = "datastor"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
flate2 = "1"
glob = "0.3.2"
globset = "0.4.16"
lazy_static = "1.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3.19"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
] }
